--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
   padding: 0;
 }
 /*-------------------------------
-         LAYOUT MOBILE
+      LAYOUT PC
 --------------------------------*/
 #container{
   position: relative;
@@ -19,6 +19,8 @@ header {
   height: 180px;
   box-shadow: 0 4px 0.3125rem rgba(0,0,0,.3);
   background: url(../images/header.png);
+  font-family:筑紫A丸ゴシック;
+  font-style:normal;
   background-size:cover;
 }
 
@@ -27,19 +29,22 @@ header {
     top: 6rem;
     left: 3rem;
     font-size: 1.5rem;
-    color:#DEB887;
+    color:#E6FFE9;
   }
   header p {
     position: absolute;
     top: 8rem;
     left: 3rem;
     font-size: 1rem;
-    color:#DEB887;
+    color:#CBFFD3;
   }
   /***** Navi *******/
 nav {
-  padding: 1rem 3rem ;
-
+  padding-top:  1rem ;
+  padding-left: 7rem ;
+  padding-bottom:  1rem ;
+font-family:筑紫A丸ゴシック;
+background: #FFFFDD;
 }
 
   nav ul{
@@ -48,43 +53,71 @@ nav {
   }
 
   nav ul li{
-
     margin-right: 5rem;
     list-style: none;
+
   }
 
   nav ul li a {
     color: #8B4513;
     text-decoration: none;
-  }
 
+  }
+  nav ul li a:hover{
+    font-style:oblique;
+  }
+/***** MAIN ******/
 main{
   display: flex;
   flex-direction: row;
 }
 
-  section{
-    flex: 3;
-    padding: 3rem;
-    background: #EEE;
-  }
+
 
     article{
+    width: 1000px; height: 750px;
       min-height: 8rem;
-      padding: 1rem;
-      margin-bottom: 2rem;
-      background: #FFF;
+      padding: 3rem;
+      margin-bottom: 0rem;
+      font-family:筑紫A丸ゴシック;
+      font-size: 1rem;
+      background: #FAFAD2;
+      color: #696969	;
     }
 
-  aside{
-    flex: 1;
-    padding: 3rem;
-    background: #D2B48C;
-  }
+ article img{padding-top: 5rem;
+   padding-left: 10rem;
+   }
+/***** Foot Menu *******/
+#menu ul{
+  display: flex;
+list-style:none;
+flex-wrap: wrap;
+padding-left: 5rem ;
+padding-top: 5rem;
+}
+
+#menu li a{
+display: block;
+width: 80px;
+/* border-bottom: 1px dotted #555; */
+text-decoration: none;
+color: #555;
+padding: 0px 0px 0px 20px;
+margin: 0px 2px;
+text-align: left;
+font-size: 14px;
+}
+#menu li a:hover{
+  font-style: italic;
+}
 /***** Footer *******/
 footer {
-  padding: 1.5rem;
+  padding:2rem;
+  margin-bottom: 2rem;
+  margin-top: 0rem;
   text-align: center;
+  font-family:Bradley Hand Bold;
   color:white;
   background: url(../images/footerimg.jpg);
   background-size:cover;
